crates/keron-lang/tests/corpus/errors/check/duplicate_union_variant.keron
type Mode = "on" | "off" | "on"
